1. Added validation and logging for completed OTP requests. 2. Added development mode feature to show all SQL queries. 3. Updated swagger to have new error code.
