# controllers/internal.otp.go
@@ -55,7 +55,8 @@ func (instance InternalOtpController) GenerateOtpNumber(context *gin.Context) {
 // @Produce  json
 // @Param payload body dto.ApiInputValidateBasicOtp true "Payload to validate T.O.T.P."
 // @Success 200 {object} dto.ApiResultValidateBasicOtp
-// @Failure 404 {object} dto.HttpError
+// @Failure 404 {object} dto.HttpError This denotes that the validation request cannot be validated against a request log entry. Only applicable if acquire request logging is enabled.
+// @Failure 400 {object} dto.HttpError
 // @Failure 409 {object} dto.HttpError
 // @Failure 500 {object} dto.HttpError
 // @Router /api/internal/v1/validate [post]
