# docs/swagger.yaml
@@ -136,6 +136,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/dto.ApiResultValidateBasicOtp'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.HttpError'
         "404":
           description: Not Found
           schema:
